tests/bad/unbound_type_var.ppl
data List = Nil | Cons a List;
()
